2009-09-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #12011: Wrong layout of datepicker in the Scheduler

2009-09-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12003: EncryptionKey generation in install tool (1-2-3-mode) still uses old encryption
	* Fixed bug #11884: User setup: buttons for create/delete ENABLE_INSTALL_TOOL-file are not integrated in user setup
	* Fixed bug #11896: User Setup miss save of be_users fields and miss handling of default value

2009-09-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #12005: Reports don't have a back reference to the reports module
	* Follow-up to feature #12001: Add checks from t3lib_BEfunc::displayWarningMessages() to the status report

2009-09-19  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11917: TCEforms suggest fails with empty label or label_alt field (thanks to Andreas Wolf)
	* Fixed bug #11988: Extension Manager is not translatable (part 6) (thanks to Christopher Stelmaszyk)
	* Fixed bug #11986: dynamic update of translation status im EM is broken
	* Fixed bug #11013: Generate Random Key still does not work (thanks to Marcus Krause)
	* Fixed bug #11875: list module doesn't show '0' values (thanks to David Bruchmann and Bastian Waidelich)
	* Fixed bug #11992: treelist cache fills devlog
	* Follow-up to bug #11505: added a forgotten comma to table definition of cache_hash

2009-09-18  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase version to 0.9.7 so it works with the caching framework adjustments.

2009-09-18  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11990: Optimize output of TCEforms suggest results (thanks to Steffen Gebert)
	* Fixed bug #11505: TYPO3 4.3 is slower than 4.2 -> re-implement native db caching and make the
		use of the caching framework configurable. !!! DB update required
	* Follow-up to bug #11505: removed superfluous fields from caching framework tables, fixed indizes

2009-09-18  Oliver Hader  <oliver@typo3.org>
